# first-agent

./: .env.example  .gitignore  README.md  pyproject.toml  react_agent.ipynb
desafio-final/: README.md  docker-compose.yml
desafio-final/mcp_servers/: poi_server.py
desafio-final/n8n/: weather_packing_canonical.json  weather_packing_workflow.json
notebooks/: m1a3_react_agent.ipynb  m1a4_research_agent.ipynb  m1a7_travel_planner.ipynb  mf_travel_agent_plus.ipynb
