[project]
name = "first-agent"
version = "0.1.0"
description = "ReAct agent notebook — Reasoning + Action loop"
requires-python = "==3.11.*"
dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "google-genai>=1.0",
    "httpx>=0.27",
]

[tool.uv]
package = false
