[project]
name = "llm-agents-fundamentals"
version = "0.1.0"
description = "Módulo 1 — Fundamentos práticos de agentes com LLMs"
requires-python = "==3.11.*"
dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "google-genai>=1.0",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-tavily>=0.1",
    "fastmcp>=2.0",
    "langchain-mcp-adapters>=0.1",
]

[tool.uv]
package = false
